# App_VideoPlayer_VisionOrange

./: CMakeLists.txt
script/: mp4_push.sh  valgrind_run.sh
src/: main.cpp  main.qml  main.qrc  video_frame_provider.cpp  video_frame_provider.h  video_player_controller.cpp  video_player_controller.h
